# my-template-repo

./: .gitignore  COMMERCIAL-LICENSE.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING
legal/agreements/: CCA.md  CLA.md
src/your_project/: _init_.py  _main_.py  core.py  license_check.py
tests/: test_core.py
